--- a/SysMax2.1.csproj
+++ b/SysMax2.1.csproj
@@ -29,4 +29,7 @@
 	<ItemGroup>
 		<Reference Include="Microsoft.VisualBasic" />
 	</ItemGroup>
+	<ItemGroup>
+	  <Folder Include="Models\" />
+	</ItemGroup>
 </Project>
